--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -20,6 +20,21 @@
 <h2 *ngIf="userAuthenticated">Home</h2>
 <h2 class="welcome"  *ngIf="!userAuthenticated">WELCOME TO E L E V A T E </h2>
 <h3 class="mess" *ngIf="!userAuthenticated">Please Login or Sign-Up to start</h3>
+
+
+<div *ngIf="userAuthenticated">
+
+
+
+
+
+</div>
+
+
+
+
+
+
 <style>
     .welcome {
       font-size: 30px;
